styling scrollbars and fixing filter margin (#1290)

--- a/public-ui/src/styles.css
+++ b/public-ui/src/styles.css
@@ -758,3 +758,37 @@ strong {
   border-color: transparent;
   background-color: transparent;
 }
+
+/* For Chrome */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d0d0d0;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b0b0b0;
+}
+/* For Firefox */
+/* Note: Firefox uses a different pseudo-element */
+body {
+  scrollbar-width: 6px;
+  scrollbar-color: #d0d0d0 #f1f1f1;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #d0d0d0;
+  border-radius: 3px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #b0b0b0;
+}
